src/objects/Associated__c.object
<CustomObject>
    <description>Anagrafiche venditori negozi (collegato a Store di riferimento)</description>
    <fields>
        <fullName>Cognome__c</fullName>
        <label>Cognome</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Data_Fine_Attivita__c</fullName>
        <label>Data Fine Attività</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Data_Inizio_Attivita__c</fullName>
        <label>Data Inizio Attività</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Id_Associate_Micros__c</fullName>
        <label>Id Associate Micros</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Id_Associate__c</fullName>
        <label>Id Associate</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Id_Location_Micros__c</fullName>
        <label>Id Location Micros</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IsActive__c</fullName>
        <label>IsActive</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Location_Name__c</fullName>
        <formula>Location__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Location Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Location__c</fullName>
        <label>Location</label>
        <referenceTo>Location__c</referenceTo>
        <relationshipName>Associateds</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Nome_FRM__c</fullName>
        <formula>Name  &amp; &quot; &quot; &amp;  Cognome__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Nome FRM</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Nome_Utente__c</fullName>
        <label>Nome Utente</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Nome__c</fullName>
        <label>Nome</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Property__c</fullName>
        <label>Property</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>key_associate__c</fullName>
        <externalId>true</externalId>
        <label>key associate</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Associate</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Associate Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Associates</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>